0028460: Visualization - V3d_View::SetZoom() performs checks which then ignored

Fixed variables misuse.